<resources>
    <string name="app_name">GraduationProject</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_starting">启动中&#8230;</string>
    <string name="skip">skig</string>
    <string name="intro_infor">介绍页面</string>

    <string name="login">登录</string>
    <string name="user_account">账号:</string>
    <string name="user_password">密码:</string>
    <string name="remember_pass">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="home_activity">主页</string>
    <string name="home_title">所有仓库</string>
    <string name="storehouse_info">仓库信息</string>
    <string name="storehouse_name">仓库名称</string>
    <string name="find_pest_kind">查询害虫种类</string>
    <string name="choose_picture">选择照片</string>
    <string name="post_picture">上传照片</string>
    <string name="hint_text_picture">请对害虫进行简要的描述</string>

    <string name="add_Storehouse">添加仓库</string>
    <string name="new_storehouse_name">仓库名称:</string>
    <string name="new_storehouse_goods">仓内货物:</string>

    <string name="deleteStoreHouse">删除仓库</string>
    <string name="changeStoreHouse">修改仓库</string>
    <string name="getStorehouseInfo">分析测量值</string>
    <string name="getTestInfoHistory">查询测量值历史</string>
    <string name="storehouse_goodInfo">仓库粮食存储情况</string>

    <string name="network_error">网络连接失败，请检查网络设置！</string>
    <string name="server_error">没找到服务器，请检查服务器连接！</string>
    <string name="text_empty">用户名或密码不能为空！</string>
    <string name="logining">Logining…</string>
    <string name="waiting">Loading…</string>

    <string name="delete_true">确定要删除吗？</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="delete_success">删除成功！</string>
    <string name="pestInfo">害虫信息</string>

    <string name="pestInfo_empty">请先获取虫子照片并对其简单描述！</string>
    <string name="testInfo_empty">为保证分析数据的准确性，请完善信息！</string>

    <string name="place">位置:</string>
    <string name="temperature_goods">温度(℃):</string>
    <string name="dampness_goods">湿度(％rh):</string>
    <string name="pestKind">害虫种类:</string>
    <string name="pestNumber">害虫数量:</string>
    <string name="make_sure">确认</string>
    <string name="getInfo_button">获取硬件测量值</string>

    <string name="warning_text">暂无数据！</string>
    <string name="infor_goods">仓库储粮温度等截面图显示</string>

    <string name="share_toWx_success">分享成功</string>
    <string name="share_toWx_error">分享失败</string>
    <string name="cancle_share_toWx">取消分享</string>
    <string name="unknown_error">位置错误</string>

    <string name="share_to_Wx">分享给好友</string>
    <string name="share_to_Friend">分享到朋友圈</string>

</resources>
