<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_10"
        android:layout_marginLeft="@dimen/common_margin_10"
        android:layout_marginRight="@dimen/common_margin_10"
        android:background="@drawable/round_layout_bg"
        android:padding="@dimen/common_margin_10">
        <TextView
            android:id="@id/text1"
            style="@style/comm_TextView"
            android:text="@string/new_storehouse_name"
            android:textSize="@dimen/text_size_20"
            />
        <TextView
            android:id="@+id/storehouse_name_text"
            style="@style/comm_TextView"
            android:textSize="@dimen/text_size_20"
            android:layout_toRightOf="@+id/text1"
            />

        <TextView
            android:id="@id/text2"
            style="@style/comm_TextView"
            android:layout_below="@+id/text1"
            android:layout_marginTop="@dimen/common_margin_10"
            android:text="@string/new_storehouse_goods"
            android:textSize="@dimen/text_size_20"
            />
        <TextView
            android:id="@+id/storehouse_goods_text"
            style="@style/comm_TextView"
            android:textSize="@dimen/text_size_20"
            android:layout_below="@+id/text1"
            android:layout_marginTop="@dimen/common_margin_10"
            android:layout_toRightOf="@+id/text2"
            />

    </RelativeLayout>


    <Button
        android:id="@+id/getInfoFromTest"
        android:layout_centerVertical="true"
        style="@style/storehouse_button"
        android:layout_marginTop="@dimen/common_margin_20"
        android:layout_marginRight="@dimen/common_margin_10"
        android:layout_marginLeft="@dimen/common_margin_10"
        android:text="@string/getStorehouseInfo"
        android:textSize="@dimen/text_size_20"
        />

    <Button
        android:id="@+id/getTestHistory"
        android:layout_centerVertical="true"
        style="@style/storehouse_button"
        android:layout_marginTop="@dimen/common_margin_20"
        android:layout_marginRight="@dimen/common_margin_10"
        android:layout_marginLeft="@dimen/common_margin_10"
        android:text="@string/getTestInfoHistory"
        android:textSize="@dimen/text_size_20"
        />

    <Button
        android:id="@+id/findPicture_from_server"
        style="@style/storehouse_button"
        android:text="查询害虫"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/common_margin_20"
        android:layout_marginRight="@dimen/common_margin_10"
        android:layout_marginLeft="@dimen/common_margin_10"
        android:textSize="@dimen/text_size_20"
        />

    <Button
        android:id="@+id/deleteStore"
        style="@style/storehouse_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/common_margin_20"
        android:layout_marginRight="@dimen/common_margin_10"
        android:layout_marginLeft="@dimen/common_margin_10"
        android:text="@string/deleteStoreHouse"
        android:textSize="@dimen/text_size_20"
        />

    <Button
        android:id="@+id/changeStore"
        style="@style/storehouse_button"
        android:layout_marginTop="@dimen/common_margin_20"
        android:layout_marginRight="@dimen/common_margin_10"
        android:layout_marginLeft="@dimen/common_margin_10"
        android:text="@string/changeStoreHouse"
        android:textSize="@dimen/text_size_20"
        />

</LinearLayout>