<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/login_background"
    android:layout_gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_size_48"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout021"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:paddingBottom="@dimen/vertical_margin_16"
        android:gravity="center"
        android:layout_marginTop="@dimen/common_margin_40">

        <EditText
            android:id="@+id/account"
            style="@style/comm_EditText"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_alignBaseline="@+id/text1"
            android:layout_alignBottom="@+id/text1"
            android:ems="10"
            android:lines="1"
            android:maxLength="16"
            android:paddingLeft="57sp"
            />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/account"
            android:layout_marginTop="@dimen/vertical_margin_16"
            android:gravity="center_vertical"
            android:paddingLeft="7.0sp"
            android:text="@string/user_account"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_20" />

        <EditText
            android:id="@+id/password"
            style="@style/comm_EditText"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_alignBaseline="@+id/text2"
            android:layout_alignBottom="@+id/text2"
            android:lines="1"
            android:ems="10"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="57sp"
            android:layout_marginBottom="@dimen/vertical_margin_16"
            />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/password"
            android:layout_below="@+id/account"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            android:paddingLeft="7.0sp"
            android:text="@string/user_password"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_20" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/common_margin_10">

        <CheckBox
            android:id="@+id/rememberPswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/blue"
            android:text="@string/remember_pass" />

        <CheckBox
            android:id="@+id/autologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/rememberPswd"
            android:layout_marginLeft="10dp"
            android:textColor="@color/blue"
            android:text="@string/auto_login" />
    </RelativeLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/Button"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        />
</LinearLayout>
